templates/chaosmeta_template.yaml
---
# Source: chaosmeta/templates/chaosmeta-flow.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: chaosmeta-flow-operator
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: chaosmeta-flow-operator
  name: chaosmeta-flow-webhook-service
  namespace: chaosmeta
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    app: chaosmeta-flow
---
# Source: chaosmeta/templates/chaosmeta-inject.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: chaosmeta-inject-operator
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: chaosmeta-inject-operator
  name: chaosmeta-inject-webhook-service
  namespace: chaosmeta
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    app: chaosmeta-inject
---
# Source: chaosmeta/templates/chaosmeta-measure.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: chaosmeta-measure-operator
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: chaosmeta-measure-operator
  name: chaosmeta-measure-webhook-service
  namespace: chaosmeta
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    app: chaosmeta-measure
---
# Source: chaosmeta/templates/chaosmeta-platform.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaosmeta-mysql
  namespace: chaosmeta
spec:
  ports:
    - port: 3306
  selector:
    app: chaosmeta-mysql
  clusterIP: None
---
# Source: chaosmeta/templates/chaosmeta-workflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: chaosmeta
spec:
  ports:
  - name: web
    port: 2746
    targetPort: 2746
  selector:
    app: argo-server
---
# Source: chaosmeta/templates/chaosmeta-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: chaosmeta-daemon
  namespace: chaosmeta
spec:
  selector:
    matchLabels:
      app.chaosmeta.io: chaosmeta-daemon
  template:
    metadata:
      labels:
        app.chaosmeta.io: chaosmeta-daemon
    spec:
#      tolerations:
#        - effect: NoSchedule
#          key: node-role.kubernetes.io/master
#      nodeSelector:
#        chaos-role.chaosmeta.io: chaosmeta-daemon
      containers:
        - name: chaosmeta-daemon
          image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-daemon:v0.5.1
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /tmp
              name: chaosmeta-workdir
      hostPID: true
      hostIPC: true
      hostNetwork: true
      volumes:
        - hostPath:
            path: /tmp
          name: chaosmeta-workdir
---
# Source: chaosmeta/templates/chaosmeta-flow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: chaosmeta-flow-operator
    app.kubernetes.io/instance: controller-manager
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: deployment
    app.kubernetes.io/part-of: chaosmeta-flow-operator
    control-plane: controller-manager
  name: chaosmeta-flow-controller-manager
  namespace: chaosmeta
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app: chaosmeta-flow
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
        app: chaosmeta-flow
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-flow-controller:v0.0.6
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
          - mountPath: /workspace/config/chaosmeta-flow.json
            name: config-volume
            subPath: chaosmeta-flow.json
      securityContext:
        runAsNonRoot: true
      serviceAccountName: chaosmeta-flow-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            name: chaosmeta-flow-config
          name: config-volume
---
# Source: chaosmeta/templates/chaosmeta-inject.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: chaosmeta-inject-operator
    app.kubernetes.io/instance: controller-manager
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: deployment
    app.kubernetes.io/part-of: chaosmeta-inject-operator
    control-plane: controller-manager
  name: chaosmeta-inject-controller-manager
  namespace: chaosmeta
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app: chaosmeta-inject
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
        app: chaosmeta-inject
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-inject-controller:v0.1.2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 20
          failureThreshold: 3
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 20
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config/chaosmeta-inject.json
          name: config-volume
          subPath: chaosmeta-inject.json
      securityContext:
        runAsNonRoot: true
      serviceAccountName: chaosmeta-inject-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: chaosmeta-inject-config
        name: config-volume
---
# Source: chaosmeta/templates/chaosmeta-measure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: chaosmeta-measure-operator
    app.kubernetes.io/instance: controller-manager
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: deployment
    app.kubernetes.io/part-of: chaosmeta-measure-operator
    control-plane: controller-manager
  name: chaosmeta-measure-controller-manager
  namespace: chaosmeta
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app: chaosmeta-measure
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
        app: chaosmeta-measure
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-measure-controller:v0.0.7
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /workspace/config/chaosmeta-measure.json
          name: config-volume
          subPath: chaosmeta-measure.json
      securityContext:
        runAsNonRoot: true
      serviceAccountName: chaosmeta-measure-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: chaosmeta-measure-config
        name: config-volume
---
# Source: chaosmeta/templates/chaosmeta-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaosmeta-platform
  namespace: chaosmeta
  labels:
    release: chaosmeta-platform
    app: chaosmeta-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaosmeta-platform
  template:
    metadata:
      labels:
        app: chaosmeta-platform
    spec:
      serviceAccountName: chaosmeta-platform
      containers:
        - name: chaosmeta-platform
          image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-platform:v0.6.1
          resources:
            requests:
              cpu: "1"
              memory: "200Mi"
            limits:
              cpu: "1"
              memory: "200Mi"
          volumeMounts:
            - name: chaosmeta-config
              mountPath: /home/admin/conf
        - name: chaosmeta-platform-frontend
          image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/chaosmeta-platform-frontend:v0.6.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      volumes:
        - name: chaosmeta-config
          configMap:
            name: chaosmeta-platform
            items:
              - key: app.conf
                path: app.conf
              - key: app.yaml
                path: app.yaml
---
# Source: chaosmeta/templates/chaosmeta-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaosmeta-mysql
  namespace: chaosmeta
spec:
  selector:
    matchLabels:
      app: chaosmeta-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chaosmeta-mysql
    spec:
      serviceAccountName: chaosmeta-platform
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/mysql:8.0
          name: chaosmeta-mysql
          ports:
            - containerPort: 3306
              name: chaosmeta-mysql
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          hostPath:
            path: "/mnt/chaosmeta-platform-mysql"
---
# Source: chaosmeta/templates/chaosmeta-workflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: chaosmeta
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      containers:
      - args:
        - server
        env: []
        image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/argocli:v3.4.10
        name: argo-server
        ports:
        - containerPort: 2746
          name: web
        readinessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 20
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
      serviceAccountName: argo-server
      volumes:
      - emptyDir: {}
        name: tmp
---
# Source: chaosmeta/templates/chaosmeta-workflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
  namespace: chaosmeta
spec:
  selector:
    matchLabels:
      app: workflow-controller
  template:
    metadata:
      labels:
        app: workflow-controller
    spec:
      containers:
      - args: []
        command:
        - workflow-controller
        image: registry.cn-hangzhou.aliyuncs.com/chaosmeta/workflow-controller:v3.4.10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 6060
          initialDelaySeconds: 90
          periodSeconds: 60
          timeoutSeconds: 30
        name: workflow-controller
        ports:
        - containerPort: 9090
          name: metrics
        - containerPort: 6060
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: workflow-controller
      securityContext:
        runAsNonRoot: true
      serviceAccountName: argo
---
# Source: chaosmeta/templates/chaosmeta-flow.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-flow-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-flow-webhook-service
      namespace: chaosmeta
      path: /mutate-chaosmeta-io-v1alpha1-loadtest
  failurePolicy: Fail
  name: mloadtest.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - loadtests
  sideEffects: None
---
# Source: chaosmeta/templates/chaosmeta-inject.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-inject-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-inject-webhook-service
      namespace: chaosmeta
      path: /mutate-chaosmeta-io-v1alpha1-experiment
  failurePolicy: Fail
  name: mexperiment.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - experiments
  sideEffects: None
---
# Source: chaosmeta/templates/chaosmeta-measure.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-measure-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-measure-webhook-service
      namespace: chaosmeta
      path: /mutate-chaosmeta-io-v1alpha1-commonmeasure
  failurePolicy: Fail
  name: mcommonmeasure.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - commonmeasures
  sideEffects: None
---
# Source: chaosmeta/templates/chaosmeta-flow.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-flow-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-flow-webhook-service
      namespace: chaosmeta
      path: /validate-chaosmeta-io-v1alpha1-loadtest
  failurePolicy: Fail
  name: vloadtest.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - loadtests
  sideEffects: None
---
# Source: chaosmeta/templates/chaosmeta-inject.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-inject-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-inject-webhook-service
      namespace: chaosmeta
      path: /validate-chaosmeta-io-v1alpha1-experiment
  failurePolicy: Fail
  name: vexperiment.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - experiments
  sideEffects: None
---
# Source: chaosmeta/templates/chaosmeta-measure.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: chaosmeta-measure-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: chaosmeta-measure-webhook-service
      namespace: chaosmeta
      path: /validate-chaosmeta-io-v1alpha1-commonmeasure
  failurePolicy: Fail
  name: vcommonmeasure.kb.io
  rules:
  - apiGroups:
    - chaosmeta.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - commonmeasures
  sideEffects: None
